--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:theme="@style/Theme.JrGeneratorAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".SecondActivity"
-            android:parentActivityName=".MainActivity"
+            android:name=".ResponseActivity"
             android:exported="false" />
+        <activity
+            android:name=".SecondActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
